src/main/default/objects/DR_Line_Item_Fulfillment__c/DR_Line_Item_Fulfillment__c.object-meta.xml
<CustomObject>
    <label>Digital River Line Item Fulfillment</label>
    <nameField>
        <displayFormat>FLI-{000000}</displayFormat>
        <label>DR Line Item Fulfillment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digital River Line Item Fulfillments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>