src/main/default/objects/DR_Line_Item_Fulfillment__c/fields/Cancel_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Quantity__c</fullName>
    <description>Specifies Order Item Quantity to Cancel</description>
    <inlineHelpText>Specifies Order Item Quantity to Cancel</inlineHelpText>
    <label>Cancel Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>