src/main/default/objects/DR_Line_Item_Fulfillment__c/fields/Digital_River_OrderItem_Id__c.field-meta.xml
<CustomField>
    <fullName>Digital_River_OrderItem_Id__c</fullName>
    <description>The Digital River order item identifier</description>
    <inlineHelpText>The Digital River order item identifier</inlineHelpText>
    <label>Digital River OrderItem Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>