src/main/default/objects/DR_Line_Item_Fulfillment__c/fields/DR_Fulfillment_Request_Log__c.field-meta.xml
<CustomField>
    <fullName>DR_Fulfillment_Request_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DR Fulfillment Request Log Record</description>
    <inlineHelpText>DR Fulfillment Request Log Record</inlineHelpText>
    <label>DR Fulfillment Request Log</label>
    <referenceTo>DR_Fulfillment_Request_Log__c</referenceTo>
    <relationshipLabel>Digital River Line Item Fulfillments</relationshipLabel>
    <relationshipName>Digital_River_Line_Item_Fulfillments</relationshipName>
    <type>Lookup</type>
</CustomField>