src/main/default/objects/DR_Line_Item_Fulfillment__c/fields/DR_Order_Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>DR_Order_Fulfillment__c</fullName>
    <description>Order Level Fulfillment Record</description>
    <inlineHelpText>Order Level Fulfillment Record</inlineHelpText>
    <label>Digital River Order Fulfillment</label>
    <referenceTo>DR_Fulfillment__c</referenceTo>
    <relationshipLabel>Digital River Line Item Fulfillments</relationshipLabel>
    <relationshipName>DR_Line_Item_Fulfillments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>