src/main/default/objects/DR_Line_Item_Fulfillment__c/fields/Fulfillment_OrderItem_Status__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_OrderItem_Status__c</fullName>
    <description>Open - Line Item Fulfillment request has to be sent to DR
        Reprocess - Previous Attempt to send Fulfillment Request to DR failed. Will be reprocessed in next run.
        Completed - Line Item fulfillment/cancellation request processed successfully
        Failed - Failed Processing this Line Item Fulfillment record after multiple attempts.</description>
    <inlineHelpText>Order Item Fulfillment Notification Status</inlineHelpText>
    <label>Fulfillment OrderItem Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Reprocess</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>