src/main/default/objects/DR_Line_Item_Fulfillment__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Used to Stored Information about Order Line Item fulfillment</description>
    <inlineHelpText>Used to Stored Information about Order Line Item fulfillment</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>