src/main/default/objects/DR_Line_Item_Fulfillment__c/fields/Retry_Attempts_Made__c.field-meta.xml
<CustomField>
    <fullName>Retry_Attempts_Made__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Retry Attempts Made</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>