src/main/default/objects/DR_Line_Item_Fulfillment__c/fields/SF_OrderItem_Id__c.field-meta.xml
<CustomField>
    <fullName>SF_OrderItem_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SF Order Item Id</description>
    <inlineHelpText>SF Order Item Id</inlineHelpText>
    <label>SF OrderItem</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Digital River Line Item Fulfillments</relationshipLabel>
    <relationshipName>Digital_River_Line_Item_Fulfillments</relationshipName>
    <type>Lookup</type>
</CustomField>