src/main/default/objects/DR_Line_Item_Fulfillment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DR_Order_Fulfillment__c</columns>
    <columns>SF_OrderItem_Id__c</columns>
    <columns>Digital_River_OrderItem_Id__c</columns>
    <columns>Fulfillment_OrderItem_Status__c</columns>
    <columns>Fulfill_Quantity__c</columns>
    <columns>Cancel_Quantity__c</columns>
    <columns>Retry_Attempts_Made__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>